-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11-pool, 17, 18
-
Component/s: hotspot
-
b30
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8269973 | 18 | Kim Barrett | P2 | Resolved | Fixed | b06 |
| JDK-8270713 | 17.0.1 | Kim Barrett | P2 | Resolved | Fixed | b03 |
| JDK-8271298 | 11.0.13 | Zhengyu Gu | P2 | Resolved | Fixed | b01 |
I think the string object can actually be unlocked at end of the method in this case as it is never returned to the C code (just the char array, but this one is not locked at all).
May cause crashes with gcs supporting object pinning (that is Shenandoah).
Found after looking at the suggestion in
- backported by
-
JDK-8269973 JNI_GetStringCritical does not lock char array
-
- Resolved
-
-
JDK-8270713 JNI_GetStringCritical does not lock char array
-
- Resolved
-
-
JDK-8271298 JNI_GetStringCritical does not lock char array
-
- Resolved
-
- relates to
-
JDK-8269686 Shenandoah: Shenandoah needs to pin all object elements in an array
-
- Closed
-
-
JDK-8269697 JNI_GetPrimitiveArrayCritical() should not accept object array
-
- Resolved
-
-
JDK-8269650 Optimize gc-locker in [Get|Release]StringCritical for latin string
-
- Resolved
-
-
JDK-8270110 Shenandoah: Add test for JDK-8269661
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/2a3d9080
-
Commit
openjdk/jdk17/0f4e07b7
-
Review
openjdk/jdk11u-dev/109
-
Review
openjdk/jdk17/209