8269661: JNI_GetStringCritical does not lock char array 8269650: Optimize gc-locker in [Get|Release]StringCritical for latin string

Reviewed-by: shade
Backport-of: 0f4e07b7d9190dd44b2fd65eff58fb6ec983a467